fix header-menu css due to wp wrapping it differently... again.

--- a/variations/default/style.css
+++ b/variations/default/style.css
@@ -381,6 +381,10 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 		padding:1em;
 	}
 
+	#content .page-title h1 {
+		margin-top:0.2em;
+	}
+
 	#footer .widget-column .widgets-wrapper {
 		padding:1em;
 	}
@@ -500,14 +504,23 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 	#title-box.vabove.hleft 	{ padding-left:1em; }
 	#title-box.vabove.hright	{ padding-right:1em; }
 
+	#title-box > a {
+		margin-bottom:0.2em;
+	}
+
+	#title-box > a:last-child {
+		margin-bottom:0em;
+	}
+
 	#title-box .name {
 		font-size:2.2em;
 		background-color:#333;
 		background-color:rgba(0,0,0,0.6);
 		color:#fff;
-		display:inline-block;
+		display:inline;
 		padding:2px 5px;
 		text-shadow: #444444 1px 1px 2px;
+		line-height:1.5em;
 	}
 	
 	#title-box .description {
@@ -515,11 +528,12 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 		background-color:#000;
 		background-color:rgba(0,0,0,0.6);
 		color:#fff;
-		display:inline-block;
+		display:inline;
 		margin-top:5px;
 		font-weight:normal;
 		padding:0.2em 0.4em;
 		font-style:italic;
+		line-height:1.5em;
 	}
 
 	#title-box .name a,
@@ -595,22 +609,26 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 		line-height: 1.3em;
 	}
 
-	#header-menu .header-navigation ul {
+	#header-menu .header-navigation ul,
+	#header-menu .menu ul {
 		list-style:none;
 		padding-left:0em;
 	}
 
-	#header-menu .header-navigation li {
+	#header-menu .header-navigation li,
+	#header-menu .menu li {
 		padding:0em !important;
 	}
 	
-	#header-menu .header-navigation > ul  {
+	#header-menu .header-navigation > ul,
+	#header-menu .menu > ul  {
 		border-bottom:solid 1px #ccc;
 		margin:0em;
 		margin-bottom:1em;
 	}
 	 
-	#header-menu .header-navigation ul a {
+	#header-menu .header-navigation ul a,
+	#header-menu .menu ul a {
 		color:#555;
 		font-size:0.9em;
 		padding:0.6em 1em;
@@ -618,34 +636,43 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 		border-top:solid 1px #ccc;
 	}
 	
-	#header-menu .header-navigation ul a:hover {
+	#header-menu .header-navigation ul a:hover,
+	#header-menu .menu ul a:hover {
 		text-decoration:none;
 		color:#003366;
 		background-color:#e9e9e9;
 	}
 	
-	#header-menu .header-navigation ul li.current_page_item > a {
+	#header-menu .header-navigation ul li.current_page_item > a,
+	#header-menu .menu ul li.current_page_item > a {
 		font-weight:bold;
 		color:#003366;
 		background-color:#f0f0f0;
 	}
 	
 	#header-menu .header-navigation ul li.current_page_item,
-	#header-menu .header-navigation ul li.current_page_ancestor {
+	#header-menu .header-navigation ul li.current_page_ancestor,
+	#header-menu .menu ul li.current_page_item,
+	#header-menu .menu ul li.current_page_ancestor {
 		background-color:#f6f6f6;
 	}
 
-	#header-menu .header-navigation ul li.current_page_item > a:hover {
+	#header-menu .header-navigation ul li.current_page_item > a:hover,
+	#header-menu .menu ul li.current_page_item > a:hover {
 		background-color:#e9e9e9;
 	}
 
 	#header-menu .header-navigation ul.children a,
-	#header-menu .header-navigation ul.sub-menu a {
+	#header-menu .header-navigation ul.sub-menu a,
+	#header-menu .menu ul.children a,
+	#header-menu .menu ul.sub-menu a {
 		border-top:none;
 	}
 	
 	#header-menu .header-navigation ul.children,
-	#header-menu .header-navigation ul.sub-menu {
+	#header-menu .header-navigation ul.sub-menu,
+	#header-menu .menu ul.children,
+	#header-menu .menu ul.sub-menu {
 		display:none;
 		padding-left:1.4em;
 	}
@@ -653,16 +680,22 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 	#header-menu .header-navigation ul li.current_page_item > ul.children,
 	#header-menu .header-navigation ul li.current_page_ancestor > ul.children,
 	#header-menu .header-navigation ul li.current_page_item > ul.sub-menu,
-	#header-menu .header-navigation ul li.current_page_ancestor > ul.sub-menu {
+	#header-menu .header-navigation ul li.current_page_ancestor > ul.sub-menu,
+	#header-menu .menu ul li.current_page_item > ul.children,
+	#header-menu .menu ul li.current_page_ancestor > ul.children,
+	#header-menu .menu ul li.current_page_item > ul.sub-menu,
+	#header-menu .menu ul li.current_page_ancestor > ul.sub-menu {
 		display:block;
 	}
 	
-	#header-menu .header-navigation ul li a {
+	#header-menu .header-navigation ul li a,
+	#header-menu .menu ul li a {
 	    background-repeat:no-repeat;
 	    background-position:left center;
 	}
 
-	#header-menu .header-navigation ul a:before {
+	#header-menu .header-navigation ul a:before,
+	#header-menu .menu ul a:before {
 		font-family: 'vtt' !important;
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
@@ -671,14 +704,20 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 	}
 
 	#header-menu .header-navigation ul li.page_item_has_children > a:before,
-	#header-menu .header-navigation ul li.menu-item-has-children > a:before {
+	#header-menu .header-navigation ul li.menu-item-has-children > a:before,
+	#header-menu .menu ul li.page_item_has_children > a:before,
+	#header-menu .menu ul li.men-item-has-children {
 		content:"\f0da\e602";
 	}
 	
 	#header-menu .header-navigation ul li.current_page_item.page_item_has_children > a:before,
 	#header-menu .header-navigation ul li.current_page_ancestor.page_item_has_children > a:before,
 	#header-menu .header-navigation ul li.current_page_item.menu-item-has-children > a:before,
-	#header-menu .header-navigation ul li.current_page_ancestor.menu-item-has-children > a:before {
+	#header-menu .header-navigation ul li.current_page_ancestor.menu-item-has-children > a:before,
+	#header-menu .menu ul li.current_page_item.page_item_has_children > a:before,
+	#header-menu .menu ul li.current_page_ancestor.page_item_has_children > a:before,
+	#header-menu .menu ul li.current_page_item.menu-item-has-children > a:before,
+	#header-menu .menu ul li.current_page_ancestor.menu-item-has-children > a:before {
 		content:"\f0d7\e602";
 	}
 
@@ -1212,7 +1251,6 @@ License URI:http://www.gnu.org/licenses/gpl-2.0.html
 
 	#content .listing-name {
 		display: block;
-		clear: both;
 		margin-top: 10px;
 	}
 	
